# MultiWorker

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
.gituhb/workflows/: static.yml  test.yml
docs/workercontext/: index.html  multiworker.html  reductions.html
src/multiworker/: __init__.py  multiworker.py
src/workercontext/: __init__.py  multiworker.py  reductions.py
tests/: test_auto_parallelise.py  test_multiworker.py  test_multiworker_async.py  test_parallelise.py  test_performance.py  test_reducer.py  test_reduction.py
